tests/reject/tenumitems.nim
discard """
  line: 7
  errormsg: "type mismatch"
"""

type A = enum b,c,d
a.items()


